--- a/_includes/contact-link.html
+++ b/_includes/contact-link.html
@@ -1,6 +1,6 @@
 <div class="contact">
   <ul class="contact__list list-reset">
-    {% if site.data.settings.twitter %}
+    <!-- {% if site.data.settings.twitter %}
       <li><a href="{{ site.data.settings.twitter }}"><i class="ion ion-logo-twitter"></i></a></li>
     {% else %} {% endif %}
 
@@ -18,6 +18,7 @@
   
     {% if site.data.settings.pinterest %}
       <li><a href="{{ site.data.settings.pinterest }}"><i class="ion ion-logo-pinterest"></i></a></li>
-    {% else %} {% endif %}
+    {% else %} {% endif %} -->
+    <p>邮箱：1296223392@qq.com</p>>
   </ul>
 </div>
