--- a/_includes/contact-link.html
+++ b/_includes/contact-link.html
@@ -19,6 +19,6 @@
     {% if site.data.settings.pinterest %}
       <li><a href="{{ site.data.settings.pinterest }}"><i class="ion ion-logo-pinterest"></i></a></li>
     {% else %} {% endif %} -->
-    <p>邮箱：1296223392@qq.com</p>>
+    <p>邮箱：1296223392@qq.com</p>
   </ul>
 </div>
