--- a/_includes/contact-link.html
+++ b/_includes/contact-link.html
@@ -1,5 +1,5 @@
 <div class="contact">
   <ul class="contact__list list-reset">
-    <p> 1296223392@qq.com</p>
+    <li><p> 1296223392@qq.com</p></li>
   </ul>
 </div>
