--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,7 @@
 <footer class="footer">
   <div class="container">
 
-    {% if site.data.settings.mailchimp %}
+    <!-- {% if site.data.settings.mailchimp %}
     {% include subscribe.html %}
     {% else %} {% endif %}
 
@@ -10,7 +10,7 @@
     {% include instagram.html %}
     {% else %} {% endif %}
 
-    {% include contact-link.html %}
+    {% include contact-link.html %} -->
 
     <div class="copyright">Copyright &copy; {{site.time | date: '%Y'}} <a href="/">{{ site.data.settings.title }}</a> — All right Reserved. Powered by wanglongke</a>.</div>
 </div>
