--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,9 +8,9 @@
 
     {% if site.data.settings.instagram %}
     {% include instagram.html %}
-    {% else %} {% endif %}
+    {% else %} {% endif %} -->
 
-    {% include contact-link.html %} -->
+    {% include contact-link.html %}
 
     <div class="copyright">Copyright &copy; {{site.time | date: '%Y'}} <a href="/">{{ site.data.settings.title }}</a> — All right Reserved. Powered by wanglongke</a>.</div>
 </div>
