--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,9 +10,10 @@
     {% include instagram.html %}
     {% else %} {% endif %} -->
 
-    {% include contact-link.html %}
+    <!-- {% include contact-link.html %} -->
 
-    <div class="copyright">Copyright &copy; {{site.time | date: '%Y'}} <a href="/">{{ site.data.settings.title }}</a> — All right Reserved. Powered by wanglongke</a>.</div>
+    <div class="copyright">Copyright &copy; {{site.time | date: '%Y'}} <a href="/">{{ site.data.settings.title }}</a> — All right Reserved. Powered by wanglongke</a>.
+    </div>
 </div>
 </footer>
 <!-- end footer -->
