--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,11 +6,11 @@
 
         <div class="logo">
           <a class="logo__link" href="{{site.baseurl}}/">
-          {%if site.data.settings.logo %}
+          <!-- {%if site.data.settings.logo %} -->
             <img class="logo__image" src="{{ site.baseurl }}/images/{{ site.data.settings.logo }}" alt="{{ site.data.settings.title }}">
-          {% else %}
+          <!-- {% else %} -->
             {{ site.data.settings.title }}
-          {% endif %}
+          <!-- {% endif %} -->
           </a>
         </div>
 
