--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,8 @@
           <!-- {%if site.data.settings.logo %} -->
             <img class="logo__image" src="{{ site.baseurl }}/images/{{ site.data.settings.logo }}" alt="{{ site.data.settings.title }}">
           <!-- {% else %} -->
-            {{ site.data.settings.title }}
+            <!-- {{ site.data.settings.title }} -->
+            <p class="logo__name"> {{ site.data.settings.title }}</p>
           <!-- {% endif %} -->
           </a>
         </div>
