--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,12 +6,7 @@
 
         <div class="logo">
           <a class="logo__link" href="{{site.baseurl}}/">
-          <!-- {%if site.data.settings.logo %} -->
             <img class="logo__image" src="{{ site.baseurl }}/images/{{ site.data.settings.logo }}" alt="{{ site.data.settings.title }}">
-          <!-- {% else %} -->
-            <!-- {{ site.data.settings.title }} -->
-            <p class="logo__name"> {{ site.data.settings.title }}</p>
-          <!-- {% endif %} -->
           </a>
         </div>
         
@@ -27,17 +22,8 @@
 
             <ul class="nav__list list-reset">
               <li class="nav__item">
-                <a href="{{site.baseurl}}/" class="nav__link">Home</a>
+                <a href="{{site.baseurl}}/" class="nav__link">Pea&Pig</a>
               </li>
-              {% for page in site.pages %}
-                {% unless page.name == 'tags.html' or page.name == '404.html' %}
-              {% if page.title %}
-              <li class="nav__item">
-                <a href="{{ page.url | prepend: site.baseurl }}" class="nav__link">{{ page.title }}</a>
-              </li>
-              {% endif %}
-                {% endunless %}
-              {% endfor %}
             </ul>
 
           </div>
