--- a/_sass/3-modules/_header.scss
+++ b/_sass/3-modules/_header.scss
@@ -79,10 +79,10 @@
       .nav__link {
         display: inline-block;
         padding: 10px 30px;
-        font-size: 28px;
+        font-size: 24px;
         font-weight: 700;
         letter-spacing: 0.5px;
-        text-transform: uppercase;
+        text-transform: None;
         color: $dark;
         &:hover {
           color: $black;
