--- a/_sass/4-layouts/_article.scss
+++ b/_sass/4-layouts/_article.scss
@@ -2,7 +2,7 @@
   margin-bottom: 40px;
 
   .article__wrapper {
-    display: block;
+    display: flex;
     align-items: center;
   }
 
@@ -19,7 +19,7 @@
 
     &:after {
       content: "";
-      display: table;
+      display: inline-block;
       width: 100%;
       padding-bottom: 70%;
     }
