--- a/_sass/4-layouts/_article.scss
+++ b/_sass/4-layouts/_article.scss
@@ -2,12 +2,13 @@
   margin-bottom: 40px;
 
   .article__wrapper {
-    display: block;
+    display: flex;
+    flex-direction: row;
     align-items: center;
   }
 
   .article__image {
-    width: 50%;
+    width: 100%;
     display: inline-block;
     background-position: center;
     background-size: cover;
@@ -26,7 +27,7 @@
   }
 
   .article__content {
-    width: 60%;
+    width: 100%;
     padding: 50px;
     margin-left: -10%;
     z-index: 1;
