--- a/_sass/4-layouts/_article.scss
+++ b/_sass/4-layouts/_article.scss
@@ -1,9 +1,11 @@
 .article {
+  display: flex;
+  flex-direction: column;
   margin-bottom: 40px;
 
   .article__wrapper {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
   }
 
