--- a/_sass/4-layouts/_article.scss
+++ b/_sass/4-layouts/_article.scss
@@ -1,6 +1,8 @@
 .article {
   margin-bottom: 40px;
   margin-left: 40px;
+  width: 1000px;
+  max-width: 100%;
 
   .article__wrapper {
     display: flex;
