--- a/_sass/4-layouts/_article.scss
+++ b/_sass/4-layouts/_article.scss
@@ -58,6 +58,8 @@
 
     .article__excerpt {
       margin-bottom: 20px;
+      width: 800px;
+      max-width: 100%;
       font-size: 16px;
       line-height: 26px;
     }
