--- a/_sass/3-modules/_hero.scss
+++ b/_sass/3-modules/_hero.scss
@@ -35,11 +35,11 @@
 
   }
 
-  .hero__image {
-    img {
-      box-shadow: 0 1px 4px rgba(0,0,0,0.15);
-    }
-  }
+  // .hero__image {
+  //   img {
+  //     box-shadow: 0 1px 4px rgba(0,0,0,0.15);
+  //   }
+  // }
 
   @media only screen and (max-width: $desktop) {
     .hero__content {
