--- a/_sass/3-modules/_hero.scss
+++ b/_sass/3-modules/_hero.scss
@@ -20,6 +20,8 @@
     }
 
     .hero__subtitle {
+      width: 500px;
+      max-width: 100%;
       font-size: 18px;
       line-height: 32px;
       letter-spacing: 0.5px;
