--- a/_sass/3-modules/_hero.scss
+++ b/_sass/3-modules/_hero.scss
@@ -11,6 +11,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    width: 500px;
+    max-width: 100%;
     width: 100%;
     padding: 0 40px 0 0;
     
