--- a/_sass/3-modules/_hero.scss
+++ b/_sass/3-modules/_hero.scss
@@ -13,7 +13,7 @@
     justify-content: center;
     width: 1000px;
     max-width: 100%;
-    width: 100%;
+    // width: 100%;
     padding: 0 40px 0 0;
     
     .hero__title {
