--- a/_sass/3-modules/_hero.scss
+++ b/_sass/3-modules/_hero.scss
@@ -11,9 +11,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 1000px;
-    max-width: 100%;
-    // width: 100%;
+    width: 100%;
     padding: 0 40px 0 0;
     
     .hero__title {
@@ -22,8 +20,6 @@
     }
 
     .hero__subtitle {
-      width: 1000px;
-      max-width: 100%;
       font-size: 18px;
       line-height: 32px;
       letter-spacing: 0.5px;
