--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -2,7 +2,7 @@
 <div class="hero">
   <div class="container">
     <div class="row">
-      <div class="last-item">
+      <div class="col col-6 col-t-12 last-item">
         <div class="hero__content">
           <h1 class="hero__title">{{ site.data.settings.author.say-hello }}</h1>
           <p class="hero__subtitle">{{ site.data.settings.author.bio }}</p>
@@ -11,8 +11,10 @@
           </div>
         </div>
       </div>
-      <div class="hero__image">
-        <img src="{{site.baseurl}}/images/{{ site.data.settings.author.image }}" alt="">
+      <div class="col col-6 col-t-12">
+        <div class="hero__image">
+          <img src="{{site.baseurl}}/images/{{ site.data.settings.author.image }}" alt="">
+        </div>
       </div>
     </div>
   </div>
