--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,14 +4,13 @@
       MathJax.Hub.Config({
           tex2jax: {
           skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
-          inlineMath: [['$','$']],
-          displayMath: [['$$','$$']]
+          inlineMath: [['$','$']]
           }
       });
   </script> -->
-  <script type="text/javascript" async
+  <!-- <script type="text/javascript" async
   src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML" async>
-  </script>
+  </script> -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
