--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,13 +3,12 @@
   <script type="text/x-mathjax-config">
       MathJax.Hub.Config({
           tex2jax: {
-          skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
           inlineMath: [['$', '$'], ['\\(', '\\)']],
           displayMath: [['$$', '$$'], ['\\[', '\\]']]
           }
       });
   </script>
-  
+   <!-- skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'], -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
