--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,7 @@
           }
       });
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/mermaid@10.6.1/dist/mermaid.min.js"></script>
    <!-- skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'], -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
