--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,21 @@
           }
       });
   </script>
+
   <script src="https://cdn.jsdelivr.net/npm/mermaid@10.6.1/dist/mermaid.min.js"></script>
+  <script>
+  const config = {
+      startOnLoad:true,
+      theme: 'forest',
+      flowchart: {
+          useMaxWidth:false,
+          htmlLabels:true
+          }
+  };
+  mermaid.initialize(config);
+  window.mermaid.init(undefined, document.querySelectorAll('.language-mermaid'));
+  </script>
+
    <!-- skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'], -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
