--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -7,7 +7,7 @@
           <h1 class="hero__title">{{ site.data.settings.author.say-hello }}</h1>
           <p class="hero__subtitle">{{ site.data.settings.author.bio }}</p>
           <div class="hero__social">
-            <span class="hero__social-title">E-mail: 1296223392@qq.com</span>
+            <span class="hero__social-title">E-mail: youknowwho@qq.com</span>
           </div>
         </div>
       </div>
