--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -2,7 +2,7 @@
 <div class="hero">
   <div class="container">
     <div class="row">
-      <div class="col col-12 col-t-12 last-item">
+      <div class="col col-12 col-t-12 col-m-12 last-item">
         <div class="hero__content">
           <h1 class="hero__title">{{ site.data.settings.author.say-hello }}</h1>
           <p class="hero__subtitle">{{ site.data.settings.author.bio }}</p>
