--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col col-12">
+    <div class="col col-12 col-t-12 col-m-12">
       <!-- begin header -->
       <header class="header">
 
