--- a/_includes/search.html
+++ b/_includes/search.html
@@ -2,7 +2,7 @@
 <div class="search">
   <div class="container">
     <div class="row">
-      <div class="col col-12">
+      <div class="col col-12 col-t-12 col-m-12">
         <div class="search__box">
           <div class="search__group">
             <div class="search__close">
