--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -4,7 +4,7 @@ layout: default
 <div class="container">
 	<div class="page-title-box">
 		<div class="row">
-			<div class="col col-10 push-2 col-t-12 push-t-0 col-m-12 push-m-0">
+			<div class="col col-10 push-2 col-t-12 push-t-0 col-m-12 push-m-0 last-item">
 				<h1 class="page-title">{{ page.title | escape }}</h1>
 			</div>
 		</div>
